compiler/tests/pass/compound_assign.afns
package test;

fn main() -> i32 {
    let x: i32 = 10;
    x += 5;
    x -= 2;
    x *= 3;
    x /= 2;
    x %= 7;
    return x;
}
